# BigNum

./: .gitignore  .vimspector.json  CMakeLists.txt  Readme.md  apc.cpp  lib.cpp  lib.hpp
profiles/: 2024-01-17_14-31-13.txt  gprof_2024-01-16_16-42-14.txt
src/: lib.cpp  lib.hpp  main.cpp
test/: catch_amalgamated.cpp  fuzz_int.cpp  fuzz_str.cpp  test.cpp
